--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,14 @@
 .vscode/**
 .vscode-test/**
-src/**
+node_modules/**
+esbuild.js
 .gitignore
 .yarnrc
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/eslint.config.mjs
 **/*.map
-**/*.ts
 **/.vscode-test.*
+src/**
+out/**
+!out/extension.js
